--- a/index.html
+++ b/index.html
@@ -48,6 +48,39 @@
     <span class="bg-primary-light-6 text-white">primary light 6</span> |
     <span class="bg-primary-light-8 text-white">primary light 8</span> |
 
+    <br /><br />
+    <a href="#" class="text-primary text-hover-orange-light-1">hover me</a>
+    <hr class="mt-2 mb-2" />
+
+    <!-- font sizes -->
+    <h2 class="mb-2">Font Sizes</h2>
+    <div class="font-sm">this is small font</div>
+    <div class="font-md">this is medium font</div>
+    <div class="font-lg">this is large font</div>
+    <div class="font-xl">this is extra large font</div>
+    <div class="font-xxl">this is extra, extra large font</div>
+
+    <hr class="mt-2 mb-2" />
+
+    <!-- buttons -->
+    <h2>Buttons</h2>
+
+    <a href="#" class="btn">default btn</a>
+    <a href="#" class="btn-primary text-white">click me</a>
+    <a href="#" class="btn-secondary text-white">click me</a>
+    <a href="#" class="btn-error text-white">click me</a>
+    <a href="#" class="btn-info">click me</a>
+    <a href="#" class="btn-outlined-purple text-purple text-hover-white"
+      >click me</a
+    >
+    <a href="#" class="btn-outlined-orange text-orange text-hover-white"
+      >click me</a
+    >
+    <a href="#" class="btn-complement-purple">click me</a>
+    <a href="#" class="btn-complement-primary">click me</a>
+
+    <hr class="mt-2 mb-2" />
+
     <!-- cards -->
     <h2>Cards</h2>
     <div class="card">
